[tool.poetry]
name = "urban-fiesta"
version = "0.1.0"
description = "Plataforma de divulgação de eventos"
authors = ["Caio Raposo <caioraposo@protonmail.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/urban-fiesta/urban-fiesta"
repository = "https://github.com/urban-fiesta/urban-fiesta"
keywords = ["divulgacao", "eventos"]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
flask-restx = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
tox = "^3.14.5"
black = {version = "^19.10b0", allow-prereleases = true}
pre-commit = "^2.1.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
