[tool.poetry]
name = "urban-fiesta"
version = "0.1.0"
description = "Plataforma de divulgação de eventos"
authors = ["Caio Raposo <caioraposo@protonmail.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/urban-fiesta/urban-fiesta"
repository = "https://github.com/urban-fiesta/urban-fiesta"
keywords = ["divulgacao", "eventos"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["urban_fiesta"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-restx = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
black = {version = "^19.10b0", allow-prereleases = true}
pre-commit = "^2.1.0"
flake8 = "^3.7.9"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
nox = "^2019.11.9"
python-dotenv = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
